--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-<img src="img/" alt="" srcset="">
+<img src="img/avatar-perfil.png" alt="Avatar da Helena" srcset="">
 <p>Eu sou Helena</p>
 <h1>Eu su uma futura biologa</h1>
-<p></p>
+<p>Eu sou a Helena , tenho 15 anos e pretendo ser uma biologa, com especialização em animais silvestres.
+    Meu inglês é intermediário, ou seja, consigo me virar quando precisar.
+    Consigo me adaptar rapidamente em lugares novos, a pessoas e etc.
+    Sou disciplinada e atenta em prazos. </p>
+    <p>Minhas habilidades</p>
+    <div>
+        <p>Criativa</p>
+        <p>Inglês intermediário</p>
+        <p>Disciplinada</p>
+        <p>Comunicativa</p>
+        <p>Atleta</p>
+    </div>
 </body>
 </html>
