--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <img src="img/avatar-perfil.png" alt="Avatar da Helena" srcset="">
 <p>Eu sou Helena</p>
-<h1>Eu su uma futura biologa</h1>
+<h1>Eu sou uma futura biologa</h1>
 <p>Eu sou a Helena , tenho 15 anos e pretendo ser uma biologa, com especialização em animais silvestres.
     Meu inglês é intermediário, ou seja, consigo me virar quando precisar.
     Consigo me adaptar rapidamente em lugares novos, a pessoas e etc.
