--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="container">
-<img src="img/avatar-perfil.png" alt="Avatar da Helena" srcset="">
-<p>Eu sou Helena</p>
+    <header class="container text-center">
+<img src="img/avatar-perfil.png" alt="Avatar da Helena" class="rounded-circle" width="150" height="150"  srcset="">
+<p class="lead">Eu sou Helena</p>
 <h1>Eu sou uma futura biologa</h1>
 <p>Eu sou a Helena , tenho 15 anos e pretendo ser uma biologa, com especialização em animais silvestres.
     Meu inglês é intermediário, ou seja, consigo me virar quando precisar.
@@ -18,11 +18,11 @@
     Sou disciplinada e atenta em prazos. </p>
     <p>Minhas habilidades</p>
     <div>
-        <p>Criativa</p>
-        <p>Inglês intermediário</p>
-        <p>Disciplinada</p>
-        <p>Comunicativa</p>
-        <p>Atleta</p>
+        <p class="badge bg-secondary">Criativa</p>
+        <p class="badge bg-secondary">/p>Inglês intermediário</p>
+        <p class="badge bg-secondary">/p>Disciplinada</p>
+        <p class="badge bg-secondary">/p>Comunicativa</p>
+        <p class="badge bg-secondary">/p>Atleta</p>
     </div>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script> 
