--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <p>Minhas habilidades</p>
     <div>
         <p class="badge bg-secondary">Criativa</p>
-        <p class="badge bg-secondary">/p>Inglês intermediário</p>
-        <p class="badge bg-secondary">/p>Disciplinada</p>
-        <p class="badge bg-secondary">/p>Comunicativa</p>
-        <p class="badge bg-secondary">/p>Atleta</p>
+        <p class="badge bg-secondary">Inglês intermediário</p>
+        <p class="badge bg-secondary">Disciplinada</p>
+        <p class="badge bg-secondary">Comunicativa</p>
+        <p class="badge bg-secondary">Atleta</p>
     </div>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script> 
