--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
                       <h5 class="card-title">Minha bibliotca: Uma Webpage Personalizada</h5>
-                      <p class="card-text">Este projeto é uma página web 
-                    
+                      <p class="card-text">Este projeto é uma página web, que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
                       </p>
-                      <button type="button" class="btn btn-link">Link</button>
+                      <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                   </div>
             </div>
