--- a/index.html
+++ b/index.html
@@ -33,13 +33,26 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
                       <h5 class="card-title">Minha bibliotca: Uma Webpage Personalizada</h5>
-                      <p class="card-text">Este projeto é uma página web,que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
+                      <p class="card-text">Este projeto é uma página web, que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
                       </p>
                       <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                   </div>
             </div>
-        </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+                    <div class="card-body">
+                      <h5 class="card-title">Minha bibliotca: Uma Webpage Personalizada</h5>
+                      <p class="card-text">Este projeto é uma página web, que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
+                      </p>
+                      <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                  </div>
+            </div>
+
+         </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script> 
