--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
     <main class="container">
         <h2>Meus projetos</h2>
         <div class="row">
+            <!-- Projeto 1 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+                    <div class="card-body">
+                      <h5 class="card-title">Minha bibliotca: Uma Webpage Personalizada</h5>
+                      <p class="card-text">Este projeto é uma página web, que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
+                      </p>
+                      <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                  </div>
+            </div>
+            <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
@@ -40,6 +53,7 @@
                   </div>
             </div>
 
+            <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
@@ -51,7 +65,6 @@
                     </div>
                   </div>
             </div>
-
          </div>
     </main>
 
