--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
          </div>
     </main>
 
+    <footer class="container py-5">
+      <h2>Entre em contato</h2>
+      <div>
+        <a href="https://github.com/Hgiddal">GitHub</a>
+      </div>
+      <p class="my-5 text-center">© Copyright 2025. Produzido por Helena Barddal</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script> 
-</body>
+  </body>
 </html>
