--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
       <h2>Entre em contato</h2>
       <div>
         <i class="bi bi-github"></i>
+        <i class="bi bi-airplane"></i>
         <a href="https://github.com/Hgiddal">GitHub</a>
       </div>
       <p class="my-5 text-center">© Copyright 2025. Produzido por Helena Barddal</p>
