--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
       <div>
         <i class="bi bi-github"></i>
         <i class="bi bi-airplane"></i>
+        <i class="bi bi-activity"></i>
+        <i class="bi bi-bank"></i>
+        <i class="bi bi-bandaid"></i>
         <a href="https://github.com/Hgiddal">GitHub</a>
       </div>
       <p class="my-5 text-center">© Copyright 2025. Produzido por Helena Barddal</p>
