--- a/index.html
+++ b/index.html
@@ -74,16 +74,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Minha biblioteca: Uma Webpage Personalizada</h5>
+        <h5 class="modal-title">A biologia dos selvagens</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
        <p>
-    O projeto é uma página web criada com HTML e CSS, destinada a exibir uma
-    coleção pessoal de livros favoritos. O objetivo é criar um ambiente virtual
-    onde seja possível compartilhar seus livros preferidos, fornecendo uma
-    descrição breve de cada um, incluindo o autor, o ano de publicação e uma
-    opção de compra.
+   A biologia da vida selvagem (também conhecida como zoologia, ecologia e conservação da natureza) é o estudo de animais selvagens, seus habitats e a interação entre eles e o meio ambiente. Abrange a observação, o estudo e a gestão de espécies, seus comportamentos, populações e a preservação de seus ecossistemas. 
   </p>
   <p>
     A estrutura do site é baseada em HTML, que define a semântica e o layout do
@@ -123,7 +119,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+        <h5 class="modal-title">Salvar animais selvagens é a minha meta</h5>
         <button
           type="button"
           class="btn-close"
@@ -195,7 +191,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+        <h5 class="modal-title">Minha meta: como seria o meu trabalho </h5>
         <button
           type="button"
           class="btn-close"
