--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
-                      <h5 class="card-title">Minha bibliotca: Uma Webpage Personalizada</h5>
-                      <p class="card-text">Este projeto é uma página web, que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
+                      <h5 class="card-title">A biologia dos selvagens</h5>
+                      <p class="card-text">A biologia da vida selvagem (também conhecida como zoologia, ecologia e conservação da natureza) é o estudo de animais selvagens, seus habitats e a interação entre eles e o meio ambiente. Abrange a observação, o estudo e a gestão de espécies, seus comportamentos, populações e a preservação de seus ecossistemas. 
                       </p>
                       <button type="button" class="btn btn-link"data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
-                      <h5 class="card-title">Minha bibliotca: Uma Webpage Personalizada</h5>
+                      <h5 class="card-title">Salvar animais selvagens é a minha meta</h5>
                       <p class="card-text">Este projeto é uma página web, que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
                       </p>
                       <button type="button" class="btn btn-link"data-bs-toggle="modal" data-bs-target="#modal2">Veja o projeto</button>
@@ -59,7 +59,7 @@
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
-                      <h5 class="card-title">Minha bibliotca: Uma Webpage Personalizada</h5>
+                      <h5 class="card-title">Minha meta: como seria o meu trabalho</h5>
                       <p class="card-text">Este projeto é uma página web, que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
                       </p>
                       <button type="button" class="btn btn-link"data-bs-toggle="modal" data-bs-target="#modal3">Veja o projeto</button>
