--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
                       <h5 class="card-title">Salvar animais selvagens é a minha meta</h5>
-                      <p class="card-text">Este projeto é uma página web, que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
+                      <p class="card-text">O resgate de animais envolve a recuperação de animais em situação de risco, como maus-tratos, abandono ou ferimentos, e a sua subsequente proteção e cuidados até que encontrem um lar ou sejam devolvidos ao meio ambiente.    
                       </p>
                       <button type="button" class="btn btn-link"data-bs-toggle="modal" data-bs-target="#modal2">Veja o projeto</button>
                     </div>
