--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+                    <img src="img/Rectangle 34624338 (1).png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
                       <h5 class="card-title">A biologia dos selvagens</h5>
                       <p class="card-text">A biologia da vida selvagem (também conhecida como zoologia, ecologia e conservação da natureza) é o estudo de animais selvagens, seus habitats e a interação entre eles e o meio ambiente. Abrange a observação, o estudo e a gestão de espécies, seus comportamentos, populações e a preservação de seus ecossistemas. 
@@ -44,7 +44,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+                    <img src="img/Rectangle 34624338 (2).png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
                       <h5 class="card-title">Salvar animais selvagens é a minha meta</h5>
                       <p class="card-text">O resgate de animais envolve a recuperação de animais em situação de risco, como maus-tratos, abandono ou ferimentos, e a sua subsequente proteção e cuidados até que encontrem um lar ou sejam devolvidos ao meio ambiente.    
@@ -57,7 +57,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+                    <img src="img/Rectangle 34624338.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
                       <h5 class="card-title">Minha meta: como seria o meu trabalho</h5>
                       <p class="card-text">Este projeto é uma página web, que estou criando com a ajuda do Alura. Estou criando um portfólio dos projetos com a ajuda do CSS.                   
@@ -104,7 +104,7 @@
     da pessoa usuária. A escolha da tipografia e do esquema de cores contribui
     para a atmosfera acolhedora do site, incentivando a exploração da coleção de
     livros.
-    <img src="img/projeto-1.png" alt="Imagem representativa do projeto de uma biblioteca online">
+    <img src="img/Rectangle 34624338 (1).png" alt="Imagem representativa do projeto de uma biblioteca online">
   </p>
       </div>
       <div class="modal-footer">
@@ -168,7 +168,7 @@
           reflexão crítica sobre o papel da tecnologia em nossas vidas.
         </p>
         <img
-          src="img/projeto-2.png"
+          src="img/Rectangle 34624338 (2).png"
           class="img-fluid w-100"
           alt="Imagem representativa do projeto de uma biblioteca online"
         />
@@ -230,7 +230,7 @@
           usuários a explorar e interagir com o conteúdo de maneira ativa, em
           vez de passivamente.
         </p>
-        <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100" />
+        <img src="img/Rectangle 34624338.png" alt="Projeto 3" class="img-fluid w-100" />
       </div>
       <div class="modal-`footer`">
         <a href="https://scratch.mit.edu/projects/951732825/"
